--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 
 *.mp4
 StreamPlayer.xcodeproj/project.xcworkspace/xcuserdata/fengfangzheng.xcuserdatad/UserInterfaceState.xcuserstate
+StreamPlayer.xcodeproj/project.xcworkspace/xcuserdata/fengfangzheng.xcuserdatad/UserInterfaceState.xcuserstate
